--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-*.md linguist-documentation=true
-*.html linguist-vendored
-*.css linguist-vendored
+* linguist-vendored
+*.js linguist-vendored=false
