--- a/section-09-dynamic routes/package.json
+++ b/section-09-dynamic routes/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "standard": "^14.3.4",
+    "standardx": "^5.0.0",
     "stylint": "^2.0.0"
   },
   "devDependencies": {
