--- a/section-09-dynamic routes/package.json
+++ b/section-09-dynamic routes/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "boilerplate-express",
+  "name": "nodejs-complete-guide",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Complete Node.js Guide",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js",
+    "start-server": "node app.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Russell Gooday",
   "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^5.0.0-alpha1",
-    "ejs": "^3.1.2",
-    "express": "^4.17.1",
-    "standard": "^14.3.4",
-    "standardx": "^5.0.0",
-    "stylint": "^2.0.0"
-  },
   "devDependencies": {
-    "clone": "^2.1.2",
-    "nodemon": "^2.0.3"
+    "nodemon": "^1.18.3",
+    "standardx": "^7.0.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "pug": "^2.0.3",
+    "ramda": "^0.28.0",
+    "uuid": "^8.3.2"
   }
 }
