--- a/section-09-dynamic routes/package.json
+++ b/section-09-dynamic routes/package.json
@@ -19,6 +19,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "jsdom": "^20.0.1",
     "pug": "^2.0.3",
     "ramda": "^0.28.0",
     "uuid": "^8.3.2"
