--- a/section-09-dynamic-routes/.gitattributes
+++ b/section-09-dynamic-routes/.gitattributes
@@ -1,2 +1,4 @@
 * linguist-vendored
-*.js linguist-vendored=false
+*.js linguist-vendored=true
+*.css linguist-detectable=false
+*.html linguist-detectable=false
