--- a/section-11-understanding-sequelize/package.json
+++ b/section-11-understanding-sequelize/package.json
@@ -20,7 +20,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "jsdom": "^20.0.1",
-    "mysql2": "^2.3.3",
+    "mariadb": "^3.0.1",
     "pug": "^2.0.3",
     "ramda": "^0.28.0",
     "sequelize": "^6.25.0",
