--- a/section-11-understanding-sequelize/package.json
+++ b/section-11-understanding-sequelize/package.json
@@ -16,14 +16,13 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^16.0.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "jsdom": "^20.0.1",
     "mariadb": "^3.0.1",
-    "pug": "^2.0.3",
     "ramda": "^0.28.0",
-    "sequelize": "^6.25.0",
-    "uuid": "^8.3.2"
+    "sequelize": "^6.25.0"
   }
 }
